risc0/zirgen/dsl/test/repro/unknown_component_error.zir
// RUN: not zirgen %s 2>&1 | FileCheck %s
// CHECK: error: unknown component `x`

component Top() {
  y := Reg(x);
}

